manifest/deployment.yaml
kind: Deployment 
apiVersion: extensions/v1beta1
metadata:
  namespace: default 
  name: bj-pro 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: bj-pro
    spec:
      containers:
        - name: bj-pro
          image: 10.254.0.50:5000/tomcat-tmp:7.0.77-jre8
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 
          volumeMounts:
            - name: host-time
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
